indexPage :: introduce website

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <!-- site metas -->
-<title>Digitco</title>
+<title>PasifGelir</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -36,7 +36,7 @@
 <!-- header -->
 <header> 
   <!-- header inner -->
-  <div class="head-top">
+  <div id="home" class="head-top">
     <div class="container">
       <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
@@ -56,7 +56,7 @@
       <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
         <div class="full">
           <div class="center-desk">
-            <div class="logo"> <a href="index.html"><img src="images/logo.jpg" alt="#"></a> </div>
+            <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="#"></a> </div>
           </div>
         </div>
       </div>
@@ -65,11 +65,10 @@
           <div class="limit-box">
             <nav class="main-menu">
               <ul class="menu-area-main">
-                <li class="active"> <a href="index.html">Home</a> </li>
-                <li> <a href="#aboutus">About</a> </li>
-                <li> <a href="#currency"> Currency</a> </li>
-                <li> <a href="#team">Team</a> </li>
-                <li> <a href="#contact">Contact us</a> </li>
+                <li> <a href="#aboutus">Hakkımızda</a> </li>
+                <li> <a href="#product">PasifGelirme</a> </li>
+                <li> <a href="#team">Takım</a> </li>
+                <li> <a href="#contact">Bize Ulaş</a> </li>
               </ul>
             </nav>
           </div>
@@ -87,66 +86,71 @@
         <!-- state banner -->
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item active"> <img class="first-slide" src="images/banner.jpg" alt="First slide"> </div>
+            <div class="carousel-item active"> <img class="first-slide" src="images/pasifgelir.png" alt="First slide"> </div>
           </div>
         </div>
         <!-- end banner --> 
       </div>
       <div class="col-md-6">
         <div class="full-slider_cont">
-          <h1>World ‘s popular<br>
-            <span class="dark_brown">Bitcoin company</span></h1>
-          <p>It is a long established fact that a reader will be distracted by the <br>
-            readable content of a page when looking at its layout. The point <br>
-            of using Lorem Ipsum is that it has a more-or-less normal dis<br>
-            tribution of letters, as opposed to using 'Content here, content<br>
-            here', making it look like readable English. Many desktop<br>
-            publishing packages and more-or-less normal distribution of <br>
-            letters, as opposed to using 'Content here, content here', making<br>
-            it look like readable English. Many desktop publishing packages and </p>
-          <div class="button_section"> <a class="main_bt" href="#">Exchange</a> <a class="main_bt" href="#">About Us</a> </div>
+          <h1>Kolay Para Kazanma Sanatı<br>
+            <span class="dark_brown">PasifGelir</span></h1>
+          <p> Pasif gelir, çalışmadan para kazanmak anlamına gelir. 
+            Bu sebeplerden birisi de işinizi yaptığınız sürece sahip olacağınız 
+            ya da devam edeceğiniz ticari marka veya varlıklarla elde edilen gelirlerdir. 
+            Pasif gelirin temelinde olan varlıklardan bahsedilebilir. 
+            Eğer maddi durumunuz iyi ise, bu durumda size gelebilecek herhangi 
+            bir sorundan etkilenebilirsiniz ama pasif gelirinize bağlarsanız bunu daha da kolay hale getirebilirsiniz.<br><br>
+            Pasif gelir aktif gelirden farklı bir özellik taşır. 
+            Aktif gelir sadece işinizde veya daha küçük zorluklarla işiniz yapmanız durumunda elde edebilirsiniz. 
+            İnsanın kazandığı pasif gelir de her zaman kişisel varlığa, sahip olduğu imkan ve olanaklara bağlıdır. 
+            Herhangi bir maddi kaynağa sahip olmak, ya da bu maddi kaynaklarla hareket etmenize imkan tanıyan yeterli ekonomik duruma sahip olmak gerekir. 
+            Örneğin biri parasal açar bir işletme vasat bir bina almak veya satmak ile para kazanabilir mi? 
+            Değilse bu tip pasif gelirin neredeyse hiçbir şekilde elde edilemeyeceğini söyleyebilirim.
+          </p>
+          <div class="button_section"> <a class="main_bt" href="#product">PasifGelirme</a> <a class="main_bt" href="#aboutus">Hakkımızda</a> </div>
         </div>
       </div>
     </div>
   </div>
 </section>
 <!-- Currency -->
-<div id="currency" class="Currency">
+<div id="product" class="Currency">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="titlepage">
-          <h2>NEED TO TAKE CARE OF YOUR <strong class="cur">CURRENCY INVESTMENTS</strong></h2>
-          <span><img src="images/boder.png" alt="img"/> </span> </div>
+          <h2> PASIFGELIRME HAKKINDA TEK BİLMEN GEREKEN: <strong class="cur">EN BASİT VE KOLAY YÖNTEM OLMASI</strong></h2>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
         <div class="three-box">
-          <figure><img src="images/1.jpg" alt="img"/></figure>
-          <div class="Bitcoin"> <i><img src="images/dollar.png" alt="img"/></i>
-            <h3>Bitcoin Transaction</h3>
-            <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud lit esse </p>
+          <figure><img src="images/download.png" height="50px" width="50px" alt="img"/></figure>
+          <div class="Bitcoin">
+            <h3>İndir</h3>
+            <p> PasifGelirMe Uygulamasını İndir  </p>
           </div>
-          <a class="read-more" href="#">Read More</a> </div>
+          <a class="read-more" href="#">Dahası</a> </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
         <div class="three-box">
           <figure><img src="images/2.jpg" alt="img"/></figure>
-          <div class="Bitcoin"> <i><img src="images/dollar.png" alt="img"/></i>
-            <h3>Bitcoin Exchange</h3>
-            <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+          <div class="Bitcoin">
+            <h3>Yükle</h3>
+            <p> PasifGelirMe Uygulamasını Yükle </p>
           </div>
-          <a class="read-more" href="#">Read More</a> </div>
+          <a class="read-more" href="#">Dahası</a> </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
         <div class="three-box">
           <figure><img src="images/3.jpg" alt="img"/></figure>
-          <div class="Bitcoin"> <i><img src="images/dollar.png" alt="img"/></i>
-            <h3>Bitcoin Investment</h3>
-            <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+          <div class="Bitcoin">
+            <h3>Kazanmaya Başla</h3>
+            <p> Yattığın Yerden Para Kazan </p>
           </div>
-          <a class="read-more" href="#">Read More</a> </div>
+          <a class="read-more" href="#">Dahası</a> </div>
       </div>
     </div>
   </div>
@@ -159,7 +163,8 @@
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="abouts-us">
           <h3>About Us <strong class="cur">our company</strong></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit ani</p>
+          <p>
+            BURAYA URUNU ACIKLA YUKLEME VE HAVADAN PARA KAZAN CARTCURT</p>
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
