--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <!-- site metas -->
-<title>PasifGelir</title>
+<title>PasifGelirM</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -46,7 +46,7 @@
           <div class="icon"> <i> <a href="#"><img src="icon/facebook.png"></a></i> <i> <a href="#"><img src="icon/Twitter.png"></a></i> <i> <a href="#"><img src="icon/linkedin.png"></a></i> <i> <a href="#"><img src="icon/google+.png"></a></i> </div>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-          <div class="contact"> <a href="#">Contact :  +71  78908540</a> </div>
+          <div class="contact"> <a href="#">Contact :  +90 532 00 00</a> </div>
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
             <nav class="main-menu">
               <ul class="menu-area-main">
                 <li> <a href="#aboutus">Hakkımızda</a> </li>
-                <li> <a href="#product">PasifGelirme</a> </li>
+                <li> <a href="#product">PasifGelirM</a> </li>
                 <li> <a href="#team">Takım</a> </li>
                 <li> <a href="#contact">Bize Ulaş</a> </li>
               </ul>
@@ -94,7 +94,7 @@
       <div class="col-md-6">
         <div class="full-slider_cont">
           <h1>Kolay Para Kazanma Sanatı<br>
-            <span class="dark_brown">PasifGelir</span></h1>
+            <span class="dark_brown">PasifGelirM</span></h1>
           <p> Pasif gelir, çalışmadan para kazanmak anlamına gelir. 
             Bu sebeplerden birisi de işinizi yaptığınız sürece sahip olacağınız 
             ya da devam edeceğiniz ticari marka veya varlıklarla elde edilen gelirlerdir. 
@@ -108,7 +108,7 @@
             Örneğin biri parasal açar bir işletme vasat bir bina almak veya satmak ile para kazanabilir mi? 
             Değilse bu tip pasif gelirin neredeyse hiçbir şekilde elde edilemeyeceğini söyleyebilirim.
           </p>
-          <div class="button_section"> <a class="main_bt" href="#product">PasifGelirme</a> <a class="main_bt" href="#aboutus">Hakkımızda</a> </div>
+          <div class="button_section"> <a class="main_bt" href="#product">PasifGelirM</a> <a class="main_bt" href="#aboutus">Hakkımızda</a> </div>
         </div>
       </div>
     </div>
@@ -120,7 +120,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="titlepage">
-          <h2> PASIFGELIRME HAKKINDA TEK BİLMEN GEREKEN: <strong class="cur">EN BASİT VE KOLAY YÖNTEM OLMASI</strong></h2>
+          <h2> PASIFGELIRM HAKKINDA TEK BİLMEN GEREKEN: <strong class="cur">EN BASİT VE KOLAY YÖNTEM OLMASI</strong></h2>
         </div>
       </div>
     </div>
@@ -130,22 +130,22 @@
           <figure><img src="images/download.png" height="50px" width="50px" alt="img"/></figure>
           <div class="Bitcoin">
             <h3>İndir</h3>
-            <p> PasifGelirMe Uygulamasını İndir  </p>
+            <p> PasifGelirM Uygulamasını İndir  </p>
           </div>
           <a class="read-more" href="#">Dahası</a> </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
         <div class="three-box">
-          <figure><img src="images/2.jpg" alt="img"/></figure>
+          <figure><img src="images/install.png" alt="img"/></figure>
           <div class="Bitcoin">
             <h3>Yükle</h3>
-            <p> PasifGelirMe Uygulamasını Yükle </p>
+            <p> PasifGelirM Uygulamasını Yükle </p>
           </div>
           <a class="read-more" href="#">Dahası</a> </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
         <div class="three-box">
-          <figure><img src="images/3.jpg" alt="img"/></figure>
+          <figure><img src="images/earnmoney.jpeg" alt="img"/></figure>
           <div class="Bitcoin">
             <h3>Kazanmaya Başla</h3>
             <p> Yattığın Yerden Para Kazan </p>
@@ -162,9 +162,15 @@
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="abouts-us">
-          <h3>About Us <strong class="cur">our company</strong></h3>
+          <h3>Hakkımızda <strong class="cur">PasifGelirM</strong></h3>
           <p>
-            BURAYA URUNU ACIKLA YUKLEME VE HAVADAN PARA KAZAN CARTCURT</p>
+            Tek yapmanız gereken ürününüz olan PasifGelirM uygulamasını bilgisayarınıza kurmak.
+            Siz uylamamızı kurduktan sonra otomatik olarak PasifGelirM ağına katılacaksınız.
+            PasifGelirM uygulamasının kapatmadığın sürece monitorunden ne kadar kazandığını, 
+            ne kadar sürede ne kadar çok kazanacağını göreceksin. 
+            Parayı canlıda kazanmak için tek yapman gereken uygulamayı yükledikten sonra
+            sana özel olarak üretilecek olan numaranı bizlere ilerek istediğinbanka hesabına iletilecektir.
+          </p>
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
@@ -183,21 +189,21 @@
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
           <div class="STRONG"> <i><img src="icon/strong.png" alt="icon"/></i>
-            <h3>STRONG SECURITY</h3>
-            <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+            <h3>GÜÇLÜ GÜVENLİK</h3>
+            <p>Son teknoloji güvenlik araçları ile incelendi</p>
           </div>
         </div>
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
           <div class="world"> <i><img src="icon/world.png" alt="icon"/></i>
-            <h3>WORLD COVERAGE</h3>
-            <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+            <h3>DÜNYA GENELİ</h3>
+            <p><strong>7 </strong>Milyondan Fazla Aktif Üye</p>
           </div>
         </div>
       </div>
       <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
         <div class="service-box">
-          <h2>our <strong class="cur">services</strong></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
+          <h2>Program <strong class="cur">Hizmetlerimiz</strong></h2>
+          <p>  </p>
           <figure><img class="img-responsive" src="images/service-image.jpg" alt="img"/></figure>
         </div>
       </div>
@@ -212,8 +218,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="titlepage2">
-          <h2>our <strong class="cur">Team</strong></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
+          <h2>Takım <strong class="cur">Üyelerimiz</strong></h2>
+          <p> Herkesin gelirini arttırmaya çalışan özverili kurucu üyelerimiz</p>
         </div>
       </div>
     </div>
@@ -224,27 +230,27 @@
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
           <div class="experts-threebox">
             <figure><img src="images/experts-1.jpg" alt="img"/></figure>
-            <h3>marco verratti </h3>
-            <span>Ceo Founder</span>
-            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+            <h3> Canan Karaelmas </h3>
+            <span>CEO</span>
+            <p> KURUCU ORTAK </p>
             <div class="icon"> <i> <a href="#"><img src="images/facebook.png"></a></i> <i> <a href="#"><img src="images/Twitter.png"></a></i> <i> <a href="#"><img src="images/linkedin.png"></a></i> <i> <a href="#"><img src="images/instagram.png"></a></i> </div>
           </div>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
           <div class="experts-threebox">
             <figure><img src="images/experts-2.jpg" alt="img"/></figure>
-            <h3>lina marzouki</h3>
-            <span>Director</span>
-            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+            <h3> Ahmet Us </h3>
+            <span>CTO</span>
+            <p>KURUCU ORTAK</p>
             <div class="icon"> <i> <a href="#"><img src="images/facebook.png"></a></i> <i> <a href="#"><img src="images/Twitter.png"></a></i> <i> <a href="#"><img src="images/linkedin.png"></a></i> <i> <a href="#"><img src="images/instagram.png"></a></i> </div>
           </div>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
           <div class="experts-threebox">
             <figure><img src="images/experts-3.jpg" alt="img"/></figure>
-            <h3>antonio conte </h3>
-            <span>Money Developer</span>
-            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+            <h3> Hakan Parlak </h3>
+            <span>CFO</span>
+            <p>  </p>
             <div class="icon"> <i> <a href="#"><img src="images/facebook.png"></a></i> <i> <a href="#"><img src="images/Twitter.png"></a></i> <i> <a href="#"><img src="images/linkedin.png"></a></i> <i> <a href="#"><img src="images/instagram.png"></a></i> </div>
           </div>
         </div>
