--- a/html/index.html
+++ b/html/index.html
@@ -229,7 +229,7 @@
       <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
           <div class="experts-threebox">
-            <figure><img src="images/experts-1.jpg" alt="img"/></figure>
+            <figure><img src="images/canan.png" alt="img"/></figure>
             <h3> Canan Karaelmas </h3>
             <span>CEO</span>
             <p> KURUCU ORTAK </p>
@@ -238,7 +238,7 @@
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
           <div class="experts-threebox">
-            <figure><img src="images/experts-2.jpg" alt="img"/></figure>
+            <figure><img src="images/ahmet.png" alt="img"/></figure>
             <h3> Ahmet Us </h3>
             <span>CTO</span>
             <p>KURUCU ORTAK</p>
@@ -247,7 +247,7 @@
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
           <div class="experts-threebox">
-            <figure><img src="images/experts-3.jpg" alt="img"/></figure>
+            <figure><img src="images/hakan.png" alt="img"/></figure>
             <h3> Hakan Parlak </h3>
             <span>CFO</span>
             <p>  </p>
@@ -264,30 +264,29 @@
     <div class="row">
       <div class="col-md-12">
         <div class="titlepage3">
-          <h2>Request A call</h2>
+          <h2>Bize Ulaş</h2>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <form>
-          <input class="form-control" placeholder="Name" type="Name">
-          <input class="form-control" placeholder="Phone" type="Phone">
+          <input class="form-control" placeholder="İsim" type="Name">
+          <input class="form-control" placeholder="Telefon" type="Phone">
           <input class="form-control" placeholder="Email" type="Email">
-          <textarea class="textarea" placeholder="Message" >Message</textarea>
+          <textarea class="textarea" placeholder="Mesaj" >Mesaj</textarea>
         </form>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="Request-box">
           <figure><img src="images/Request.jpg" alt="img"/></figure>
           <div class="Register">
-            <h3>Get started today widh digital money bitcon</h3>
-            <p>consectetur adipiscing elit, sed do eiusmod tempor 
-              incididunt ut labore et dolore magna aliqua. Ut enim </p>
-            <a href="#">Register now</a> </div>
+            <h3>Bugün PasifGelirM ile kazanmaya başlamak için aklına takılan soruları bize ilet</h3>
+            <p> PasifGelirM Uygulamamızı yüklerken sorunla mı karşılaştın HEMEN SOR </p>
+            <a href="#">PasifGelirM</a> </div>
         </div>
       </div>
-      <button class="send-btn">Send</button>
+      <button class="send-btn"><a href=".">Yolla</a></button>
     </div>
   </div>
 </div>
@@ -299,7 +298,7 @@
       <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
           <div id="contact" class="Contact">
-            <h3>Contact Us</h3>
+            <h3>Bize Ulaş</h3>
             <ul class="contant_icon">
               <li> <a href="#"><img src="icon/location.png"></a></li>
               <li> <a href="#"><img src="icon/tellephone.png"></a></li>
@@ -309,10 +308,10 @@
         </div>
         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
           <div class="Social">
-            <h3>Social links</h3>
+            <h3>Sosyal Medyada Biz</h3>
             <ul class="socil_link">
               <li><a href="#"><img src="icon/fb.png"></a></li>
-              <li><a href="#"><img src="icon/Tw.png"></a></li>
+              <li><a href="#"><img src="icon/Twitter.png"></a></li>
               <li> <a href="#"><img src="icon/lin.png"></a></li>
               <li> <a href="#"><img src="icon/insta.png"></a></li>
             </ul>
@@ -320,9 +319,9 @@
         </div>
         <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
           <div class="newsletter">
-            <h3>newsletter</h3>
-            <input class="new" placeholder="Enter your email" type="Enter your email" >
-            <button class="subscribe">subscribe</button>
+            <h3>Haberler İçin</h3>
+            <input class="new" placeholder="Email" type="Mail Grubu" >
+            <button class="subscribe">Abone Ol</button>
           </div>
         </div>
       </div>
@@ -330,7 +329,7 @@
   </div>
   <div class="copyright">
     <div class="container">
-      <p>Copyright 2019 All Right Reserved By <a href="http://html.design">Free html Templates</a></p>
+      <p>Copyright 2019 All Right Reserved By PasifGelirMe</a></p>
     </div>
   </div>
 </footer>
