indexPage :: introduction updated

--- a/html/index.html
+++ b/html/index.html
@@ -96,19 +96,21 @@
           <h1>Kolay Para Kazanma Sanatı<br>
             <span class="dark_brown">PasifGelirM</span></h1>
           <p> Pasif gelir, çalışmadan para kazanmak anlamına gelir. 
-            Bu sebeplerden birisi de işinizi yaptığınız sürece sahip olacağınız 
-            ya da devam edeceğiniz ticari marka veya varlıklarla elde edilen gelirlerdir. 
-            Pasif gelirin temelinde olan varlıklardan bahsedilebilir. 
-            Eğer maddi durumunuz iyi ise, bu durumda size gelebilecek herhangi 
-            bir sorundan etkilenebilirsiniz ama pasif gelirinize bağlarsanız bunu daha da kolay hale getirebilirsiniz.<br><br>
-            Pasif gelir aktif gelirden farklı bir özellik taşır. 
-            Aktif gelir sadece işinizde veya daha küçük zorluklarla işiniz yapmanız durumunda elde edebilirsiniz. 
-            İnsanın kazandığı pasif gelir de her zaman kişisel varlığa, sahip olduğu imkan ve olanaklara bağlıdır. 
-            Herhangi bir maddi kaynağa sahip olmak, ya da bu maddi kaynaklarla hareket etmenize imkan tanıyan yeterli ekonomik duruma sahip olmak gerekir. 
-            Örneğin biri parasal açar bir işletme vasat bir bina almak veya satmak ile para kazanabilir mi? 
-            Değilse bu tip pasif gelirin neredeyse hiçbir şekilde elde edilemeyeceğini söyleyebilirim.
+            Bunun tam aksi olan aktif gelir ise doğrudan zaman harcayıp bunun karşılığında para kazanmanız demektir. 
+            Pasif gelir oluşturmak başlangıçta yoğun mesailer gerektirebilir ama bizim ile birlikte bu aşamayı rahatlıkla atlatacaksınız.
+            Pasif geliriniz varsa uyurken bile para kazanırsınız. Üstüne uyanıkken de kazanırsınız. Pasif gelir otomatiktir, kendiliğinden kazanılır. 
+            <br><br>
+            Zaman, elimizdeki en önemli varlık. Aslına bakarsanız paradan bile çok daha değerli. 
+            Para harcanır, sonra geri kazanılır ama zaman dediğimiz şey tek kullanımlıktır. 
+            Geçtikten sonra bir daha kesinlikle geri gelmez.
+            Giden zamanı fiziksel olarak tekrar yaşayamazsınız. 
+            Bu yüzden pasif gelir çok önemlidir çünkü size daha fazla zaman serbestliği tanır. 
+            Aylık finansal giderlerinizi karşılamanın yükünü daha az hissetmeye başladığınızda zaman serbestliğiniz olur.
+            <br><br>
+            Şuanda tamamen <b>ücretsiz</b> olan uygulamamız  <b>PasifGelirM</b>, size pasif gelir oluşturma konusunda yardımcı olur. 
+            <a href="#">PasifGelirM</a>, şuan dünya genelinde 7 milyondan fazla aktif kullanıcısı olan bir programdır ve sizi de aramızda görmeyi çok isteriz.
           </p>
-          <div class="button_section"> <a class="main_bt" href="#product">PasifGelirM</a> <a class="main_bt" href="#aboutus">Hakkımızda</a> </div>
+          <div class="button_section"> <a class="main_bt" href="#product">PasifGelirM</a> <a class="main_bt" href="#aboutus">Kazanma Programı</a> </div>
         </div>
       </div>
     </div>
