index :: links updated

--- a/html/index.html
+++ b/html/index.html
@@ -110,7 +110,7 @@
             Şuanda tamamen <b>ücretsiz</b> olan uygulamamız  <b>PasifGelirM</b>, size pasif gelir oluşturma konusunda yardımcı olur. 
             <a href="#">PasifGelirM</a>, şuan dünya genelinde 7 milyondan fazla aktif kullanıcısı olan bir programdır ve sizi de aramızda görmeyi çok isteriz.
           </p>
-          <div class="button_section"> <a class="main_bt" href="#product">PasifGelirM</a> <a class="main_bt" href="#aboutus">Kazanma Programı</a> </div>
+          <div class="button_section"> <a class="main_bt" href="/pasifGelirMIndir.php">PasifGelirM</a> <a class="main_bt" href="/software/onlineMode/pasifgelirm.xslm">Kazanma Çizelgesi</a> </div>
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
             <h3>İndir</h3>
             <p> PasifGelirM Uygulamasını İndir  </p>
           </div>
-          <a class="read-more" href="#">Dahası</a> </div>
+          <a class="read-more" href="/pasifGelirMIndir.php">PasifGelirM</a> </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
         <div class="three-box">
@@ -143,7 +143,7 @@
             <h3>Yükle</h3>
             <p> PasifGelirM Uygulamasını Yükle </p>
           </div>
-          <a class="read-more" href="#">Dahası</a> </div>
+          <a class="read-more" href="/pasifGelirMIndir.php">PasifGelirM</a> </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
         <div class="three-box">
@@ -152,7 +152,7 @@
             <h3>Kazanmaya Başla</h3>
             <p> Yattığın Yerden Para Kazan </p>
           </div>
-          <a class="read-more" href="#">Dahası</a> </div>
+          <a class="read-more" href="/software/onlineMode/pasifgelirm.xslm">Çizelge</a> </div>
       </div>
     </div>
   </div>
@@ -177,7 +177,7 @@
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="abouts-us">
-          <figure><img src="images/about.png" alt="img"/></figure>
+          <figure><img src="images/about.jpeg" alt="img"/></figure>
         </div>
       </div>
     </div>
@@ -285,10 +285,10 @@
           <div class="Register">
             <h3>Bugün PasifGelirM ile kazanmaya başlamak için aklına takılan soruları bize ilet</h3>
             <p> PasifGelirM Uygulamamızı yüklerken sorunla mı karşılaştın HEMEN SOR </p>
-            <a href="#">PasifGelirM</a> </div>
+            <a href="/software/onlineMode/pasifgelirm.xslm">PasifGelirM</a> </div>
         </div>
       </div>
-      <button class="send-btn"><a href=".">Yolla</a></button>
+      <button class="send-btn"><a href="/">Yolla</a></button>
     </div>
   </div>
 </div>
@@ -323,7 +323,7 @@
           <div class="newsletter">
             <h3>Haberler İçin</h3>
             <input class="new" placeholder="Email" type="Mail Grubu" >
-            <button class="subscribe">Abone Ol</button>
+            <button class="subscribe"><a href="/">Abone Ol</a></button>
           </div>
         </div>
       </div>
